# nih-plug-example

./: Cargo.toml  README.md  bundler.toml
src/: editor.rs  lib.rs  main.rs
